Created main games

--- a/index.html
+++ b/index.html
@@ -53,19 +53,18 @@
 
                 <div class="about-me">
                     <h1>About Me</h1><br>
-                    <p>Hi, I'm Denis, also known as FrontendTitan. As a passionate and self-taught Web Developer, I have
+                    <p>Hi, I'm Denis, also known as FrontendTitan. As a disciplined and self-taught Web Developer, I
+                        have
                         embarked on a programming journey at a young age. With dedication and continuous
                         self-improvement, I have honed my skills to become proficient in various programming languages
                         and technologies.</p><br>
-                    <p>Driven by my discipline for programming and, I have started a YouTube channel.
+                    <p>Driven by my discipline for programming, I have started a YouTube channel.
                         Through my channel, I aim to provide entertaining and informative content about web
-                        development, software development, and other related topics.</p><br>
-                    <p>Join me on this exciting journey as we explore the world of coding together. Together, we can
-                        unlock the endless possibilities of software development and create amazing projects. Let's
-                        learn, grow, and build a vibrant community of developers.</p><br>
-                    <p>My goal is to inspire and educate
-                        individuals who are interested in pursuing a career in the tech industry. My videos are designed
-                        to be easily <i>watchable by non-coders</i>, making them accessible to a wider audience.</p>
+                        development, software development, and other related topics, even for <b><i>non-coders</i></b>
+                    </p><br>
+                    <p>Check out <a href="https://youtube.com/@FrontendTitan?feature=shared"
+                            target='_blank'>FrontendTitan YouTube</a>
+                        to see all the fun projects I have made</p>
                 </div>
 
                 <div class='skills'>
