--- a/ps5/index.html
+++ b/ps5/index.html
@@ -48,124 +48,257 @@
                 <h1 class='header-h1'>PlayStation 5 Games</h1>
                 <p class='header-p'>Playable on the actual PlayStation 5 Console, by visiting <a
                         href="https://www.frontendtitan.com/ps5">frontendtitan.com/ps5</a></p><br>
+                <p class='header-p' style='margin-top: -15px;'>I think the website looks a bit trash and the code is
+                    getting hard to maintain, a redesign is coming soon</p><br>
 
-                <div class="flex-body">
-                    <div class="card">
-                        <h1>Guess The Number</h1>
-                        <button onclick="window.location.href='guess-the-number'">Play</button>
+                <div>
+                    <h1 class='game-section-title'>Flappy Bird</h1>
+                    <div class="flex-body">
+                        <div class="card">
+                            <h1>Flappy Bird</h1>
+                            <button onclick="window.location.href='flappy-bird'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Flappy Bird - Nightly</h1>
+                            <button onclick="window.location.href='/ps5/flappy-bird/?nightly=true'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Flappy Bird - Low Gravity</h1>
+                            <button onclick="window.location.href='/ps5/flappy-bird/?lowGravity=true'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Flappy Bird - Nightly Low Gravity</h1>
+                            <button
+                                onclick="window.location.href='/ps5/flappy-bird/?lowGravity=true&nightly=true'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Flappy Bird - Strong Gravity</h1>
+                            <button onclick="window.location.href='/ps5/flappy-bird/?strongGravity=true'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Flappy Bird - Strong Gravity</h1>
+                            <button onclick="window.location.href='/ps5/flappy-bird/?strongGravity=true'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Flappy Bird - Nightly Strong Gravity</h1>
+                            <button
+                                onclick="window.location.href='/ps5/flappy-bird/?nightly=true&strongGravity=true'">Play</button>
+                        </div>
+                    </div><br>
+
+                    <h1 class='game-section-title'>Google Dino Game</h1>
+                    <div class="flex-body">
+                        <div class="card">
+                            <h1>Google Dino Game</h1>
+                            <button onclick="window.location.href='google-dino-game'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Google Dino Game - Dark Mode</h1>
+                            <button onclick="window.location.href='/ps5/google-dino-game/?darkMode=true'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Google Dino Game - Low Gravity</h1>
+                            <button
+                                onclick="window.location.href='/ps5/google-dino-game/?lowGravity=true'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Google Dino Game - Dark Mode Low Gravity</h1>
+                            <button
+                                onclick="window.location.href='/ps5/google-dino-game/?lowGravity=true&darkMode=true'">Play</button>
+                        </div>
+                    </div><br>
+
+                    <h1 class='game-section-title'>Minesweeper</h1>
+                    <div class="flex-body">
+                        <div class="card">
+                            <h1>Minesweeper 7x7</h1><button
+                                onclick="location.href='minesweeper/?boardSize=7&mineCount=4'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Minesweeper 10x10</h1><button onclick="location.href='minesweeper'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Minesweeper 15x15</h1><button
+                                onclick="location.href='/ps5/minesweeper/?boardSize=15&mineCount=11'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Minesweeper 20x20</h1><button
+                                onclick="location.href='/ps5/minesweeper/?boardSize=20&mineCount=30'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Minesweeper 30x30</h1><button
+                                onclick="location.href='/ps5/minesweeper/?boardSize=30&mineCount=60&cellSize=27'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Minesweeper 40x40</h1><button
+                                onclick="location.href='/ps5/minesweeper/?boardSize=40&mineCount=143&cellSize=15'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Minesweeper 50x50</h1><button
+                                onclick="location.href='/ps5/minesweeper/?boardSize=50&mineCount=163&cellSize=13'">Play</button>
+                        </div>
+                    </div><br>
+                    <div class='warning-div'>
+                        <p class='warning'>*Big Screen Only</p>
                     </div>
-                    <div class="card">
-                        <h1>Tic-Tac-Toe</h1>
-                        <button onclick="window.location.href='tic-tac-toe'">Play</button>
+                    <div class="flex-body">
+                        <div class="card">
+                            <h1>Minesweeper 70x70</h1><button
+                                onclick="location.href='/ps5/minesweeper/?boardSize=70&mineCount=250&cellSize=13'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Minesweeper 80x80</h1><button
+                                onclick="location.href='/ps5/minesweeper/?boardSize=80&mineCount=300&cellSize=13'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Minesweeper 90x90</h1><button
+                                onclick="location.href='/ps5/minesweeper/?boardSize=90&mineCount=500&cellSize=13'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Minesweeper 100x100</h1><button
+                                onclick="location.href='/ps5/minesweeper/?boardSize=100&mineCount=900&cellSize=13'">Play</button>
+                        </div>
+                    </div><br>
+
+                    <h1 class='game-section-title'>Pong</h1>
+                    <div class="flex-body">
+                        <div class="card">
+                            <h1>Pong</h1>
+                            <button onclick="window.location.href='pong'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Pong - Impossible Difficulty</h1>
+                            <button onclick="window.location.href='/ps5/pong/?impossible=true'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Pong - Small Paddles</h1>
+                            <button onclick="window.location.href='/ps5/pong/?smallPaddles=true'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Pong - Large Paddles</h1>
+                            <button onclick="window.location.href='/ps5/pong/?largePaddles=true'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Pong - Small Paddles Impossible AI</h1>
+                            <button
+                                onclick="window.location.href='/ps5/pong/?smallPaddles=true&impossible=true'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Pong - Large Paddles Impossible AI</h1>
+                            <button
+                                onclick="window.location.href='/ps5/pong/?largePaddles=true&impossible=true'">Play</button>
+                        </div>
                     </div>
-                    <div class="card">
-                        <h1>Rock Paper Scissors</h1>
-                        <button onclick="window.location.href='rock-paper-scissors'">Play</button>
+
+                    <h1 class='game-section-title'>Hangman</h1>
+                    <div class="flex-body">
+                        <div class="card">
+                            <h1>Hangman - Regular</h1>
+                            <button onclick="window.location.href='hangman'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Hangman - Hard Words</h1>
+                            <button onclick="window.location.href='/ps5/hangman/?hard=true'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Hangman - Timer</h1>
+                            <button onclick="window.location.href='/ps5/hangman/?timer=true'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Hangman - Timer + Hard Words</h1>
+                            <button onclick="window.location.href='/ps5/hangman/?timer=true&hard=true'">Play</button>
+                        </div>
+                    </div><br>
+
+                    <h1 class='game-section-title'>Space Invaders</h1>
+                    <div class="flex-body">
+                        <div class="card">
+                            <h1>Space Invaders</h1>
+                            <button onclick="window.location.href='space-invaders'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Space Invaders - Increased AI Speed</h1>
+                            <button
+                                onclick="window.location.href='/ps5/space-invaders/?increasdedAISpeed=true'">Play</button>
+                        </div>
+                    </div><br>
+
+                    <h1 class='game-section-title'>Tetris</h1>
+                    <div class="flex-body">
+                        <div class="card">
+                            <h1>Tetris</h1>
+                            <button onclick="window.location.href='tetris'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Tetris - Speed Decrease</h1>
+                            <button onclick="window.location.href='/ps5/tetris/?speed=3000'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Tetris - Speed Increase</h1>
+                            <button onclick="window.location.href='/ps5/tetris/?speed=500'">Play</button>
+                        </div>
+                        <div class="card">
+                            <h1>Tetris - Super Speed</h1>
+                            <button onclick="window.location.href='/ps5/tetris/?speed=100'">Play</button>
+                        </div>
                     </div>
-                    <div class="card">
-                        <h1>Hangman</h1>
-                        <button onclick="window.location.href='hangman'">Play</button>
-                    </div>
-                    <div class="card">
-                        <h1>Blackjack</h1>
-                        <button onclick="window.location.href='blackjack'">Play</button>
-                    </div>
-                    <div class="card">
-                        <h1>Minesweeper</h1>
-                        <button onclick="window.location.href='minesweeper'">Play</button>
-                    </div>
-                    <div class="card">
-                        <h1>Snake</h1>
-                        <button onclick="window.location.href='snake'">Play</button>
-                    </div>
-                    <div class="card">
-                        <h1>Pong</h1>
-                        <button onclick="window.location.href='pong'">Play</button>
-                    </div>
-                    <div class="card">
-                        <h1>Space Invaders</h1>
-                        <button onclick="window.location.href='space-invaders'">Play</button>
-                    </div>
-                    <div class="card">
-                        <h1>Memory Matching Game</h1>
-                        <button onclick="window.location.href='memory-matching-game'">Play</button>
-                    </div>
-                    <div class="card">
-                        <h1>Tetris</h1>
-                        <button onclick="window.location.href='tetris'">Play</button>
-                    </div>
-                    <div class="card">
-                        <h1>Flappy Bird</h1>
-                        <button onclick="window.location.href='flappy-bird'">Play</button>
-                    </div>
-                    <div class="card">
-                        <h1>Google Dino Game - Made by FrontendTitan</h1>
-                        <button onclick="window.location.href='google-dino-game'">Play</button>
+
+                    <h1 class='game-section-title'>Snake</h1>
+                    <div class="flex-body">
+                        <div class="card">
+                            <h1>Snake</h1>
+                            <button onclick="window.location.href='snake'">Play</button>
+                        </div>
+                    </div><br>
+
+                    <h1 class='game-section-title'>Blackjack</h1>
+                    <div class="flex-body">
+                        <div class="card">
+                            <h1>Blackjack</h1>
+                            <button onclick="window.location.href='blackjack'">Play</button>
+                        </div>
                     </div>
                 </div>
+                <!-- <div class="card">
+                    <h1>Guess The Number</h1>
+                    <button onclick="window.location.href='guess-the-number'">Play</button>
+                </div>
+                <div class="card">
+                    <h1>Tic-Tac-Toe</h1>
+                    <button onclick="window.location.href='tic-tac-toe'">Play</button>
+                </div>
+                <div class="card">
+                    <h1>Rock Paper Scissors</h1>
+                    <button onclick="window.location.href='rock-paper-scissors'">Play</button>
+                </div>
+                <div class="card">
+                    <h1>Memory Matching Game</h1>
+                    <button onclick="window.location.href='memory-matching-game'">Play</button>
+                </div>
+                <div class="card">
+                    <h1>Breakout</h1>
+                    <button onclick="window.location.href='breakout'">Play</button>
+                </div> -->
             </div>
-            <!-- Entry point of the website -->
-        </main>
+    </div>
+    <!-- END point of the website -->
+    </main>
     </div>
 
     <div id="dev-panel-ps5">
         <a href="http://192.168.0.10:5500">DEV SERVER <span id="dev-browser"></span></a>
-        <style>
-            #dev-panel-ps5 {
-                position: fixed;
-                bottom: 0;
-                right: 0;
-                background: #000;
-                color: #fff;
-                padding: 10px;
-                border-top-left-radius: 10px;
-                cursor: pointer;
-                text-decoration: none;
-                border: 1px solid #fff;
-                display: none;
-            }
-        </style>
     </div>
 
-
     <script>
-
-        // Don't Worry bro, just because u have found this code don't
-        // Mean u can hack me. it's just for my local development server
-        // Chances are that it might redirect you to a device on your
-        // network, but the chances are very slim.
+        /** Don't Worry bro, just because u have found this code don't
+         * mean u can hack me. it's just for my local development server
+         * chances are that it might redirect you to a device on your
+         * network, but the chances are very slim, depending if you code or not.
+         */
         if (navigator.vendor === "Sony Interactive Entertainment Inc." &&
             navigator.platform === "PlayStation 5") {
             document.getElementById('dev-panel-ps5').style.display = 'block'
         }
-
-        window.addEventListener('DOMContentLoaded', (event) => {
-            const elements = document.querySelectorAll('.flex-body > *')
-
-            const observer = new IntersectionObserver((entries) => {
-                entries.forEach((entry) => {
-                    if (entry.isIntersecting) {
-                        // Start the animation 2 seconds after the element is scrolled into view
-                        const delay = Array.from(elements).indexOf(entry.target) * 0.25
-                        entry.target.style.animationDelay = `${delay}s`
-                        entry.target.style.animationPlayState = 'running'
-                        observer.unobserve(entry.target)
-                    }
-                })
-            }, {
-                threshold: 0.1 // Adjust this value to control when the callback is triggered
-            })
-
-            elements.forEach((element) => {
-                // Initially pause the animation
-                element.style.animationPlayState = 'paused'
-                observer.observe(element)
-            })
-        })
-
-        setInterval(() => {
-
-        }, 1000)
     </script>
 </body>
 
